a lot of new text and new figures

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -893,6 +893,16 @@ f
   publisher={Sociedade Brasileira de Psicologia}
 }
 
+@article{de2018analises,
+  title={An{\'a}lises Interseccionais a Partir da Ra{\c{c}}a e da Classe: Medo do Crime e Autoritarismo no Brasil},
+  author={de Lavor Filho, Tadeu Lucas and Barbosa, Vilkiane Natercia Malherme and de Almeida Segundo, Dami{\~a}o Soares and Junior, James Ferreira Moura and de Martino Jannuzzi, Paulo and de Lima, Renato S{\'e}rgio},
+  journal={Psicologia: Ci{\^e}ncia e Profiss{\~a}o},
+  volume={38},
+  pages={223--237},
+  year={2018},
+  publisher={Conselho Federal de Psicologia}
+}
+
 @article{rokeach1956political,
   title={Political and religious dogmatism: An alternative to the authoritarian personality.},
   author={Rokeach, Milton},
@@ -2599,4 +2609,40 @@ year={1972}
   journal={Perspectives on Politics},
   year={2018}
 }
+
+@article{rudmin1999norwegian,
+  title={Norwegian short-form of the Marlowe-Crowne social desirability scale},
+  author={Rudmin, Floyd W},
+  journal={Scandinavian Journal of Psychology},
+  volume={40},
+  number={3},
+  pages={229--233},
+  year={1999},
+  publisher={Wiley Online Library}
+}
+
+@article{heerwig2009education,
+  title={Education and social desirability bias: The case of a black presidential candidate},
+  author={Heerwig, Jennifer A and McCabe, Brian J},
+  journal={Social Science Quarterly},
+  volume={90},
+  number={3},
+  pages={674--686},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{gonzalez2012vote,
+  title={Vote buying and social desirability bias: Experimental evidence from Nicaragua},
+  author={Gonzalez-Ocantos, Ezequiel and De Jonge, Chad Kiewiet and Mel{\'e}ndez, Carlos and Osorio, Javier and Nickerson, David W},
+  journal={American Journal of Political Science},
+  volume={56},
+  number={1},
+  pages={202--217},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+
+
 
